# rocket_telemetry_app

./: .gitignore  README.md
client/: App.tsx  Deployment.drawio  Untitled Diagram.drawio  contextDiagram.drawio  package-lock.json  package.json
client/android/app/: build.gradle
client/android/app/src/main/assests/: rocket_mobile_emb.glb  starship.glb
client/ios/client/: Info.plist
client/src/components/: ModelViewer.tsx
client/src/navigation/: types.ts
client/src/screens/: DesignViewList.tsx  FlightMonitor.tsx  FlightViewList.tsx  LoginScreen.tsx  MainMenu.tsx  RocketModelView  VideoViewer.tsx
deploy/: docker-compose.yml  publisher.py  subscriber.py
deploy/emqx/: Dockerfile.emqx
server/: .gitignore  CMakeLists.txt  Dockerfile.server  Dockerfile.tests  README.md
server/lib/: json.hpp
server/sql/: schema.sql
server/src/: main.cpp
server/src/api/controller/: command_handler.cpp  command_handler.h  connection_handler.cpp  connection_handler.h
server/src/api/controller/flight/: flight_create_command.cpp  flight_create_command.h  flight_delete_command.cpp  flight_delete_command.h  flight_read_command.cpp  flight_read_command.h
server/src/api/controller/rocket_design/: rocket_create_command.cpp  rocket_create_command.h  rocket_delete_command.cpp  rocket_delete_command.h  rocket_read_command.cpp  rocket_read_command.h  rocket_update_command.cpp  rocket_update_command.h
server/src/api/dto/: flightlog_serializable.cpp  flightlog_serializable.h  json_serializable.cpp  json_serializable.h  rocket_design_serializable.cpp  rocket_design_serializable.h
server/src/domain/: client.cpp  client.h  flight_log.cpp  flight_log.h  rocket_design.cpp  rocket_design.h  rocket_image.h  telemetry_point.cpp  telemetry_point.h  user.cpp  user.h
server/src/infrastructure/persistence/db/: postgres_database.cpp  postgres_database.h
server/src/infrastructure/persistence/repository/: flight_log_repository.cpp  flight_log_repository.h  i_repository.h  rocket_design_repository.cpp  rocket_design_repository.h
server/src/service/: flightlog_service.cpp  flightlog_service.h
server/tests/: serialize_deserialize_test.cpp  test_dummy.cpp
